--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/genfablab/three-seed#readme",
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
+    "@types/three": "^0.140.0",
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.2",
     "webpack": "^5.72.1",
@@ -28,6 +28,6 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "three": "^0.140.2"
   }
 }
